--- a/to_do_list/index.html
+++ b/to_do_list/index.html
@@ -15,15 +15,16 @@
 		</form>
 		<div class="board">
 			<ul class="todo_list">
-				<li>
+				<!-- <li>
 		 			<span class="delete">×</span>
 		 			<input type="checkbox">label>Vanilla JavaScript</label>
-		 		</li>
+		 		</li> -->
 			</ul>
 		</div>
 	</div>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" 
+	crossorigin="anonymous"></script>
 <script type="text/javascript" src="to_do_list.js">
 </script>
 </html>
