--- a/to_do_list/index.html
+++ b/to_do_list/index.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>To Do List</title>
-	<link rel="stylesheet" href="style.css">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<title>To Do List - Park Ji Yoon</title>
+	<link rel="stylesheet" href="style.css"> <!-- css 파일과 연결 -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> <!-- 부트스트랩 이용 설정 -->
 </head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <body>
-	<div id="content">
-		<div id="title">TO DO LIST</div>
-		<form id="form" action="index.html" method="post">
-			<input type="text" placeholder="new list" name="list" id="input_list" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-			<button id="add_btn" type="submit">ADD</button>
-		</form>
-		<div class="board">
-			<ul class="todo_list">
-				<!-- <li>
-		 			<span class="delete">×</span>
-		 			<input type="checkbox">label>Vanilla JavaScript</label>
-		 		</li> -->
-			</ul>
+	<div class="container">
+		<div class="header">
+			<h3 id="title">To Do List</h3>
+		</div>
+		<div class="content">
+			<form id="form" action="index_test.html" method="post">
+				<input type="text" placeholder="Enter what you need to do" name="list" id="new_list" class="form_class" aria-describedby="inputGroup-sizing-default">
+				<button id="add_btn" type="submit">ADD</button>
+			</form>
+			<div class="to_do_lists">
+				<ul>
+					
+				</ul>
+			</div>
+		</div>
+		<div class="footer">
 		</div>
 	</div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" 
 	crossorigin="anonymous"></script>
-<script type="text/javascript" src="to_do_list.js">
-</script>
+<script type="text/javascript" src="to_do_list.js"></script>
 </html>
