--- a/to_do_list/index.html
+++ b/to_do_list/index.html
@@ -22,6 +22,9 @@
 			</div>
 		</div>
 		<div class="footer">
+			<div id="download">
+				You can download codes in <a href="https://github.com/Park-Ji-Yoon/ToDoList" target="_blank">here</a> !!
+			</div>
 		</div>
 	</div>
 </body>
